# apertium-kmr

./: .gitattributes  .gitignore  Makefile.am  README  apertium-kmr.kmr.acx  apertium-kmr.kmr.dix  apertium-kmr.kmr.rlx  apertium-kmr.pc.in  apertium-kur.kur.dix  apertium-kur.kur.lexc  apertium-kur.kur.rlx  apertium-kur.kur.twol  apertium-kur.pc.in  configure.ac  modes.xml
dev/: apertium-kur.kur.lexc  apertium-kur.kur.twol  conj.sh  kmr-feats.tsv  kmr-ud-apertium.conllu  kurmanji-basic.kmr-eng.txt  test-phrases.txt  test-words.txt  wikt-en-noun-list
dev/verbs/: verbs.py  verbs.txt
test/: analysis-input.txt  analysis-morph-expected.txt  tests.json
texts/: dirok.txt  ethem.vislcg.txt  miscellaneous.vislcg.txt  qundir.txt  sherlock.txt  sherlock.vislcg.txt
texts/puupankki/: puupankki.kmr.conllu  puupankki.kmr.tagged  puupankki.srd.conllu
